--- a/package.json
+++ b/package.json
@@ -4,8 +4,21 @@
   "description": "Teacher friendly translator",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server",
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Deleon Reescano",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^5.1.0",
+    "nodemon": "^2.0.2"
+  },
+  "dependencies": {
+    "config": "^3.2.5",
+    "express": "^4.17.1",
+    "ibm-watson": "^5.4.0",
+    "request": "^2.88.2"
+  }
 }
