--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ibm-watson": "^5.4.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "stream-buffers": "^3.0.2"
   }
 }
