--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
+    "br": "/Applications/Brave\\ Browser.app/Contents/MacOS/Brave\\ Browser --remote-debugging-port=9222 --user-data-dir=/tmp/brave-debug",
+    "debug": "concurrently \"npm run br\" \"npm run client\"",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Deleon Reescano",
