--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix client",
     "br": "/Applications/Brave\\ Browser.app/Contents/MacOS/Brave\\ Browser --remote-debugging-port=9222 --user-data-dir=/tmp/brave-debug",
     "debug": "concurrently \"npm run br\" \"npm run client\"",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "Deleon Reescano",
   "license": "ISC",
