deployment fix: specify node version to use on herkou

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "mytranslator",
   "version": "1.0.0",
   "description": "Teacher friendly translator",
+  "engines": {
+    "node": "13.8.x"
+  },
   "main": "server.js",
   "scripts": {
     "start": "node server",
