--- a/package.json
+++ b/package.json
@@ -22,11 +22,8 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "config": "^3.2.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ibm-watson": "^5.4.0",
-    "request": "^2.88.2",
-    "stream-buffers": "^3.0.2"
+    "ibm-watson": "^5.4.0"
   }
 }
