--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "ibm-watson": "^5.4.0"
+    "ibm-watson": "^5.4.0",
+    "rollbar": "^2.15.1"
   }
 }
