--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "ibm-watson": "^5.4.0",
-    "rollbar": "^2.15.1"
+    "rollbar": "^2.15.1",
+    "validator": "^13.0.0"
   }
 }
