--- a/package.json
+++ b/package.json
@@ -7,16 +7,10 @@
   },
   "main": "server.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
-    "debug-server": "nodemon --inspect server",
-    "client": "npm start --prefix client",
-    "brMac": "/Applications/Brave\\ Browser.app/Contents/MacOS/Brave\\ Browser --remote-debugging-port=9222 --user-data-dir=/tmp/brave-debug",
-    "brWin": "start brave.exe localhost:3000 --remote-debugging-port=9222 --user-data-dir=c:/tmp/debug-profile",
-    "debugMac": "concurrently \"npm run brMac\" \"npm run client\" \"npm run debug-server\"",
-    "debugWin": "concurrently \"npm run brWin\" \"npm run client\" \"npm run debug-server\"",
-    "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    "dev": "cross-env NODE_OPTIONS='--inspect' next",
+    "build": "next build",
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build"
   },
   "author": "Deleon Reescano",
   "license": "ISC",
@@ -25,10 +19,30 @@
     "nodemon": "^2.0.2"
   },
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "@material-ui/core": "^4.9.10",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.50",
+    "axios": "^0.19.2",
+    "cross-env": "^7.0.2",
+    "firebase": "^7.14.2",
     "ibm-watson": "^5.4.0",
-    "rollbar": "^2.15.1",
+    "isomorphic-unfetch": "^3.0.0",
+    "moment": "^2.24.0",
+    "mongoose": "^5.9.9",
+    "next": "^9.3.4",
+    "next-connect": "^0.6.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hook-form": "^5.5.3",
+    "react-markdown": "^4.3.1",
+    "react-moment": "^0.9.7",
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "rollbar": "^2.15.2",
+    "swr": "^0.2.0",
+    "uuid": "^7.0.3",
     "validator": "^13.0.0"
   }
 }
