--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
     "@material-ui/core": "^4.9.10",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.50",
+    "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "ibm-watson": "^5.4.0",
+    "mongoose": "^5.9.12",
     "next": "^9.3.4",
+    "next-connect": "^0.6.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
+    "uuid": "^8.0.0",
     "validator": "^13.0.0"
   }
 }
