--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "main": "server.js",
   "scripts": {
-    "dev": "cross-env NODE_OPTIONS='--inspect' next",
+    "dev": "next",
     "build": "next build",
     "start": "next start -p $PORT",
     "heroku-postbuild": "npm run build"
