--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^4.3.1",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
+    "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
