data uri scheme generator for converting buffer

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@material-ui/lab": "^4.0.0-alpha.50",
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
+    "datauri": "^3.0.0",
     "firebase": "^7.14.2",
     "ibm-watson": "^5.4.0",
     "isomorphic-unfetch": "^3.0.0",
