--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "datauri": "^3.0.0",
+    "dotenv": "^8.2.0",
     "firebase": "^7.14.2",
     "ibm-watson": "^5.4.0",
     "isomorphic-unfetch": "^3.0.0",
